# radeon_memory_visualizer

./: .clang-format  .gitignore  .readthedocs.yaml  BUILD.md  Buildinfo.properties.in  CMakeLists.txt  Known_Issues.md  LICENSE.txt  License.txt  NOTICES.txt  README.md  RELEASE_NOTES.txt  Release_Notes.txt
source/backend/: CMakeLists.txt  rmt_adapter_info.cpp  rmt_adapter_info.h  rmt_atomic.cpp  rmt_atomic.h  rmt_configuration.h  rmt_data_profile.h  rmt_data_set.cpp  rmt_data_set.h  rmt_data_snapshot.cpp  rmt_data_snapshot.h  rmt_data_timeline.cpp  rmt_data_timeline.h  rmt_include_pevents.cpp  rmt_job_system.cpp  rmt_job_system.h  rmt_legacy_snapshot_writer.cpp  rmt_legacy_snapshot_writer.h  rmt_linear_buffer.cpp  rmt_linear_buffer.h  rmt_memory_aliasing_timeline.cpp  rmt_memory_aliasing_timeline.h  rmt_memory_event_history.cpp  rmt_memory_event_history.h  rmt_memory_event_history_impl.cpp  rmt_memory_event_history_impl.h  rmt_mutex.cpp  rmt_mutex.h  rmt_page_table.cpp  rmt_page_table.h  rmt_physical_allocation_list.cpp  rmt_physical_allocation_list.h  rmt_pool.cpp  rmt_pool.h  rmt_process_map.cpp  rmt_process_map.h  rmt_process_start_info.h  rmt_rdf_file_parser.cpp  rmt_rdf_file_parser.h  rmt_rdf_snapshot_writer.cpp  (+21 more)
source/frontend/: CMakeLists.txt  dark_mode_stylesheet.qss  light_mode_stylesheet.qss  main.cpp  resources.qrc  stylesheet.qss
source/frontend/MacOSX/: MacOSXBundleInfo.plist.in
source/frontend/managers/: load_animation_manager.cpp  load_animation_manager.h  message_manager.cpp  message_manager.h  navigation_manager.cpp  navigation_manager.h  pane_manager.cpp  pane_manager.h  snapshot_manager.cpp  snapshot_manager.h  trace_manager.cpp  trace_manager.h
source/frontend/models/: aliased_resource_model.cpp  aliased_resource_model.h  allocation_bar_model.cpp  allocation_bar_model.h  allocation_item_model.cpp  allocation_item_model.h  allocation_multi_bar_model.cpp  allocation_multi_bar_model.h  carousel_model.cpp  carousel_model.h  colorizer.cpp  colorizer.h  colorizer_base.cpp  colorizer_base.h  combo_box_model.cpp  combo_box_model.h  heap_combo_box_model.cpp  heap_combo_box_model.h  message_manager.cpp  message_manager.h  resource_item_model.cpp  resource_item_model.h  resource_sorter.cpp  resource_sorter.h  resource_usage_combo_box_model.cpp  resource_usage_combo_box_model.h  snapshot_manager.cpp  snapshot_manager.h  trace_manager.cpp  trace_manager.h
source/frontend/models/compare/: allocation_delta_model.cpp  allocation_delta_model.h  memory_leak_finder_model.cpp  memory_leak_finder_model.h  snapshot_delta_model.cpp  snapshot_delta_model.h
source/frontend/models/proxy_models/: allocation_proxy_model.cpp  allocation_proxy_model.h  memory_leak_finder_proxy_model.cpp  memory_leak_finder_proxy_model.h  resource_details_proxy_model.cpp  resource_details_proxy_model.h  resource_proxy_model.cpp  resource_proxy_model.h  snapshot_timeline_proxy_model.cpp  snapshot_timeline_proxy_model.h  table_proxy_model.cpp  table_proxy_model.h
source/frontend/models/snapshot/: allocation_explorer_model.cpp  allocation_explorer_model.h  allocation_overview_model.cpp  allocation_overview_model.h  heap_overview_heap_model.cpp  heap_overview_heap_model.h  memory_map_model.cpp  memory_map_model.h  resource_details_model.cpp  resource_details_model.h  resource_list_model.cpp  resource_list_model.h  resource_overview_model.cpp  resource_overview_model.h  resource_properties_model.cpp  resource_properties_model.h  resource_timeline_item_model.cpp  resource_timeline_item_model.h
source/frontend/models/timeline/: device_configuration_model.cpp  device_configuration_model.h  snapshot_item_model.cpp  snapshot_item_model.h  timeline_colorizer.cpp  timeline_colorizer.h  timeline_model.cpp  timeline_model.h
source/frontend/settings/: rmv_geometry_settings.cpp  rmv_geometry_settings.h  rmv_settings.cpp  rmv_settings.h  settings_reader.cpp  settings_reader.h  settings_writer.cpp  settings_writer.h
source/frontend/util/: constants.h  definitions.h  log_file_writer.cpp  log_file_writer.h  rmv_util.cpp  rmv_util.h  string_util.cpp  string_util.h  thread_controller.cpp  thread_controller.h  time_util.cpp  time_util.h  version.cpp  version.h  version.h.in  widget_util.cpp  widget_util.h
source/frontend/views/: base_pane.cpp  base_pane.h  colorizer.cpp  colorizer.h  colorizer_base.cpp  colorizer_base.h  compare_pane.cpp  compare_pane.h  debug_window.cpp  debug_window.h  debug_window.ui  keyboard_zoom_shortcuts.cpp  keyboard_zoom_shortcuts.h  main_window.cpp  main_window.h  main_window.ui  navigation_manager.cpp  navigation_manager.h  pane_manager.cpp  pane_manager.h  timeline_colorizer.cpp  timeline_colorizer.h
source/frontend/views/compare/: compare_start_pane.cpp  compare_start_pane.h  compare_start_pane.ui  memory_leak_finder_pane.cpp  memory_leak_finder_pane.h  memory_leak_finder_pane.ui  snapshot_delta_pane.cpp  snapshot_delta_pane.h  snapshot_delta_pane.ui
source/frontend/views/custom_widgets/: rmv_allocation_bar.cpp  rmv_allocation_bar.h  rmv_camera_snapshot_widget.cpp  rmv_camera_snapshot_widget.h  rmv_cancellable_loading_widget.cpp  rmv_cancellable_loading_widget.h  rmv_carousel.cpp  rmv_carousel.h  rmv_carousel_item.cpp  (+55 more)
source/frontend/windows/: resource.h  rmv.rc
source/parser/: CMakeLists.txt  rmt_address_helper.cpp  rmt_address_helper.h  rmt_assert.cpp  rmt_assert.h  rmt_constants.h  rmt_error.h  rmt_file_format.cpp  rmt_file_format.h  rmt_format.cpp  rmt_format.h  rmt_parser.cpp  rmt_parser.h  rmt_platform.cpp  rmt_platform.h  rmt_print.cpp  rmt_print.h  rmt_profile.h  rmt_rdf_adapter_info.cpp  rmt_rdf_adapter_info.h  rmt_rdf_data_stream.cpp  rmt_rdf_data_stream.h  rmt_rdf_dd_event_info.cpp  rmt_rdf_dd_event_info.h  rmt_rdf_gpu_mem_segment_info.cpp  rmt_rdf_gpu_mem_segment_info.h  rmt_rdf_snapshot_index.cpp  rmt_rdf_snapshot_index.h  rmt_rdf_snapshot_info.cpp  rmt_rdf_snapshot_info.h  rmt_string_memory_pool.cpp  rmt_string_memory_pool.h  rmt_token.cpp  rmt_token.h  rmt_token_heap.cpp  rmt_token_heap.h  rmt_types.h  rmt_util.h
source/parser/linux/: safe_crt.cpp  safe_crt.h
(+98 files in other folders)
